[tool.poetry]
name = "poetry-link"
version = "0.1.6"
description = "Editable installs for packages developed with Poetry using Flit."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.0a2"
slam-cli = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.plugins."poetry.application.plugin"]
link-command = "poetry_link:LinkCommandPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
